# Reflection

./: .gitignore  README.md  premake5.lua
include/reflection/: config.h  error.hpp  generate.hpp  generation.hpp  macros.h  reflection.hpp  storage.hpp  utility.hpp
src/Core/: Generate.cpp  Generate.h
src/Scripts/: TestScript.h
tests/: CMakeLists.txt  main.cpp  utility.hpp
tests/include/: Entity.hpp  NativeScript.h  utility.hpp
tests/scripts/: CMakeLists.txt  ExampleScript.h  MainScript.cpp  MainScript.h  MyPhone.h  NativeScript.h  StaticScript.h  TestScript.cpp  TestScript.h  helper.txt
tests/src/: main.cpp  utility.hpp
